--- a/language/i18n_el.json
+++ b/language/i18n_el.json
@@ -4641,5 +4641,16 @@
     "CL_CF_AS_your_device_offline": "Η συσκευή σας είναι εκτός σύνδεσης",
     "CL_CF_AS_waiting": "αναμονή...",
     "CL_CF_CS_window_air_select_panel": "Επιλέξτε την εικόνα που ταιριάζει με τον πίνακα ελέγχου της μονάδας σας.",
-    "CL_DV_HOB_program_zone_bridge_step2": "Επιλέξτε τη ζώνη μαγειρέματος ή τις γεφυρωμένες ζώνες που θέλετε να χρησιμοποιήσετε. "
+    "CL_DV_HOB_program_zone_bridge_step2": "Επιλέξτε τη ζώνη μαγειρέματος ή τις γεφυρωμένες ζώνες που θέλετε να χρησιμοποιήσετε. ",
+    "CL_CF_HP_Add_Automation": "Προσθήκη Αυτοματισμού",
+    "CL_CF_HP_Add_Automation_tip": "Μπορείτε να προσθέσετε τις πιο χρησιμοποιούμενες μη αυτόματες ρουτίνες εδώ",
+    "CL_CF_HP_Add_Home_Status": "Προσθήκη αρχικής κατάστασης",
+    "CL_CF_HP_Add_Home_Status_tip": "Μπορείτε να προσθέσετε τις πιο χρησιμοποιημένες κάρτες συσκευών εδώ",
+    "CL_CF_HP_Add_Things_To_Do": "Προσθέστε πράγματα που πρέπει να κάνετε",
+    "CL_CF_HP_Add_Things_To_Do_tip": "Μπορείτε να προσθέσετε τα πιο χρησιμοποιημένα γραφικά στοιχεία εδώ",
+    "CL_CF_HP_Add_Discover": "Προσθήκη Discover",
+    "CL_CF_HP_Add_Discover_tip": "Μπορείτε να προσθέσετε τις πιο χρησιμοποιημένες συμβουλές εδώ",
+    "CL_CF_HP_no_device_tip": "Συνδέστε\n τις συσκευές σας",
+    "CL_CF_AS_check_devices": "Ελέγξτε την κατάσταση της συσκευής σας.",
+    "CL_CF_AS_scan": "ΣΑΡΩΣΗ"
 }
