--- a/language/i18n_en.json
+++ b/language/i18n_en.json
@@ -4580,7 +4580,7 @@
     "CL_DV_RF_last_clean_was": "Last cleaning was **",
     "CL_CF_AS_cleaning_and_care_tips": "Cleaning and Care Tips",
     "CL_CF_AS_needs_attention": "The device needs attention.",
-    "CL_CF_AS_run_normal_condition": "Your device runs in normal condition.",
+    "CL_CF_AS_run_normal_condition": "Your devices runs in normal condition.",
     "CL_DV_WM_offline_content1": "Check if your device is plugged in and the power is on.",
     "CL_DV_WM_offline_content2": "Make sure your device is connected to a local wireless network.",
     "CL_DV_WM_offline_content3": "Check your WiFi signal strength. If the signal is low, it might be that the router is too far away from the device.",
@@ -4638,8 +4638,19 @@
     "CL_DV_HOB_program_content_step2": "Select the cooking zone you want to use. ",
     "CL_DV_HOB_program_content_step3": "Confirm with “WIFI” button on selected zone on the induction hob.",
     "CL_DV_HOB_temperature_content_step1": "Select the temperature.",
-    "CL_CF_AS_your_device_offline": "Youre device is offline.",
+    "CL_CF_AS_your_device_offline": "Your devices are offline.",
     "CL_CF_AS_waiting": "waiting...",
     "CL_CF_CS_window_air_select_panel": "Select the image that matches your unit’s control panel.",
-    "CL_DV_HOB_program_zone_bridge_step2": "Select the cooking zone or the bridged zones you want to use. "
+    "CL_DV_HOB_program_zone_bridge_step2": "Select the cooking zone or the bridged zones you want to use. ",
+    "CL_CF_HP_Add_Automation": "Add Automation",
+    "CL_CF_HP_Add_Automation_tip": "You can add the most used manual routines here",
+    "CL_CF_HP_Add_Home_Status": "Add Home Status",
+    "CL_CF_HP_Add_Home_Status_tip": "You can add the most used device cards here",
+    "CL_CF_HP_Add_Things_To_Do": "Add Things To Do",
+    "CL_CF_HP_Add_Things_To_Do_tip": "You can add the most used widgets here",
+    "CL_CF_HP_Add_Discover": "Add Discover",
+    "CL_CF_HP_Add_Discover_tip": "You can add the most used tips here",
+    "CL_CF_HP_no_device_tip": "Connect your devices",
+    "CL_CF_AS_check_devices": "Check the status of your devices.",
+    "CL_CF_AS_scan": "SCAN"
 }
