--- a/language/i18n_ru.json
+++ b/language/i18n_ru.json
@@ -4641,5 +4641,16 @@
     "CL_CF_AS_your_device_offline": "Ваше устройство находится в автономном режиме",
     "CL_CF_AS_waiting": "ожидающий...",
     "CL_CF_CS_window_air_select_panel": "Выберите изображение, соответствующее панели управления вашего устройства.",
-    "CL_DV_HOB_program_zone_bridge_step2": "Выберите зону приготовления пищи или объединенные зоны, которые вы хотите использовать. "
+    "CL_DV_HOB_program_zone_bridge_step2": "Выберите зону приготовления пищи или объединенные зоны, которые вы хотите использовать. ",
+    "CL_CF_HP_Add_Automation": "Добавить автоматизацию",
+    "CL_CF_HP_Add_Automation_tip": "Вы можете добавить наиболее используемые ручные процедуры здесь",
+    "CL_CF_HP_Add_Home_Status": "Добавить домашний статус",
+    "CL_CF_HP_Add_Home_Status_tip": "Здесь вы можете добавить карты наиболее используемых устройств.",
+    "CL_CF_HP_Add_Things_To_Do": "Добавить дела",
+    "CL_CF_HP_Add_Things_To_Do_tip": "Здесь вы можете добавить наиболее используемые виджеты",
+    "CL_CF_HP_Add_Discover": "Добавить Открыть",
+    "CL_CF_HP_Add_Discover_tip": "Вы можете добавить наиболее используемые советы здесь",
+    "CL_CF_HP_no_device_tip": "Подключить\nваши устройства",
+    "CL_CF_AS_check_devices": "Проверьте состояние прибора.",
+    "CL_CF_AS_scan": "СКАНИРОВАНИЕ"
 }
