--- a/language/i18n_sl.json
+++ b/language/i18n_sl.json
@@ -4641,5 +4641,16 @@
     "CL_CF_AS_your_device_offline": "Vaša naprava je brez povezave",
     "CL_CF_AS_waiting": "čakanje...",
     "CL_CF_CS_window_air_select_panel": "Izberite sliko, ki ustreza nadzorni plošči vaše enote.",
-    "CL_DV_HOB_program_zone_bridge_step2": "Izberite kuhališče ali premoščena območja, ki jih želite uporabiti. "
+    "CL_DV_HOB_program_zone_bridge_step2": "Izberite kuhališče ali premoščena območja, ki jih želite uporabiti. ",
+    "CL_CF_HP_Add_Automation": "Dodaj avtomatizacijo",
+    "CL_CF_HP_Add_Automation_tip": "Tukaj lahko dodate najpogosteje uporabljene ročne rutine",
+    "CL_CF_HP_Add_Home_Status": "Dodajte status doma",
+    "CL_CF_HP_Add_Home_Status_tip": "Tukaj lahko dodate najpogosteje uporabljene kartice naprav",
+    "CL_CF_HP_Add_Things_To_Do": "Dodajte opravila",
+    "CL_CF_HP_Add_Things_To_Do_tip": "Tukaj lahko dodate najpogosteje uporabljene pripomočke",
+    "CL_CF_HP_Add_Discover": "Dodaj Discover",
+    "CL_CF_HP_Add_Discover_tip": "Tukaj lahko dodate najpogosteje uporabljene nasvete",
+    "CL_CF_HP_no_device_tip": "Povežite\nsvoje naprave",
+    "CL_CF_AS_check_devices": "Preverite stanje vaše naprave.",
+    "CL_CF_AS_scan": "SCAN"
 }
