--- a/language/i18n_pt.json
+++ b/language/i18n_pt.json
@@ -4641,5 +4641,16 @@
     "CL_CF_AS_your_device_offline": "Seu dispositivo está offline",
     "CL_CF_AS_waiting": "esperando...",
     "CL_CF_CS_window_air_select_panel": "Selecione a imagem que corresponde ao painel de controle da sua unidade.",
-    "CL_DV_HOB_program_zone_bridge_step2": "Selecione a zona de cozimento ou as zonas interligadas que você deseja usar. "
+    "CL_DV_HOB_program_zone_bridge_step2": "Selecione a zona de cozimento ou as zonas interligadas que você deseja usar. ",
+    "CL_CF_HP_Add_Automation": "Adicionar automação",
+    "CL_CF_HP_Add_Automation_tip": "Você pode adicionar as rotinas manuais mais usadas aqui",
+    "CL_CF_HP_Add_Home_Status": "Adicionar status inicial",
+    "CL_CF_HP_Add_Home_Status_tip": "Você pode adicionar os cartões de dispositivos mais usados aqui",
+    "CL_CF_HP_Add_Things_To_Do": "Adicionar coisas para fazer",
+    "CL_CF_HP_Add_Things_To_Do_tip": "Você pode adicionar os widgets mais usados aqui",
+    "CL_CF_HP_Add_Discover": "Adicionar Descobrir",
+    "CL_CF_HP_Add_Discover_tip": "Você pode adicionar as dicas mais usadas aqui",
+    "CL_CF_HP_no_device_tip": "Ligue\nos seus aparelhos",
+    "CL_CF_AS_check_devices": "Verifique o estado do seu dispositivo.",
+    "CL_CF_AS_scan": "ESCANEAMENTO"
 }
